fix(gateway): Encode path properly when defined by a policy
Closes gravitee-io/issues#1019

--- a/gravitee-gateway-http-client/gravitee-gateway-http-client-core/pom.xml
+++ b/gravitee-gateway-http-client/gravitee-gateway-http-client-core/pom.xml
@@ -45,6 +45,12 @@
             <version>${vertx.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
+        </dependency>
+
         <!-- Spring dependencies -->
         <dependency>
             <groupId>org.springframework</groupId>
