--- a/pom.xml
+++ b/pom.xml
@@ -172,5 +172,6 @@
         <commons-validator.version>1.4.1</commons-validator.version>
         <json-path.version>2.2.0</json-path.version>
         <wiremock.version>2.8.0</wiremock.version>
+        <guava.version>23.6-jre</guava.version>
     </properties>
 </project>
