fix(geoip): disable the geoip plugin by default

--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -122,9 +122,9 @@ reporters:
 #    settings:
 #      number_of_shards: 5
 #      number_of_replicas: 1
-    pipeline:
-      plugins:
-        ingest: geoip
+#   pipeline:
+#     plugins:
+#       ingest: geoip
 
 # Gateway service configurations. Provided values are default values.
 # All services are enabled by default. To stop one of them, you have to add the property 'enabled: false' (See the
