--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,7 @@
     </dependencies>
 
     <properties>
-        <gravitee-definition.version>1.9.0</gravitee-definition.version>
+        <gravitee-definition.version>1.10.0-SNAPSHOT</gravitee-definition.version>
         <gravitee-common.version>1.8.1</gravitee-common.version>
         <gravitee-expression-language.version>1.0.0</gravitee-expression-language.version>
         <gravitee-repository.version>1.13.0</gravitee-repository.version>
