--- a/pom.xml
+++ b/pom.xml
@@ -20,165 +20,88 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.groupgti.shared.gravitee</groupId>
-    <artifactId>jdbc-repository</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-
-    <name>JDBC Repository</name>
-    <description>JDBC Repository for Gravitee</description>
-
     <parent>
         <groupId>io.gravitee</groupId>
         <artifactId>gravitee-parent</artifactId>
-        <version>8</version>
+        <version>10</version>
     </parent>
 
+    <groupId>io.gravitee.repository</groupId>
+    <artifactId>gravitee-repository-jdbc</artifactId>
+    <version>1.14.0-SNAPSHOT</version>
+    <name>Gravitee.io APIM - Repository - JDBC</name>
+
     <properties>
+        <gravitee-repository.version>1.14.0</gravitee-repository.version>
+        <gravitee-repository-test.version>1.14.1-SNAPSHOT</gravitee-repository-test.version>
+        <maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
+        <HikariCP.version>2.7.6</HikariCP.version>
+        <liquibase.version>3.5.3</liquibase.version>
+        <liquibase-slf4j.version>2.0.0</liquibase-slf4j.version>
+        <h2.version>1.4.196</h2.version>
     </properties>
 
-    <distributionManagement>
-        <repository>
-            <id>gti-repo</id>
-            <name>GTI Internal Repository</name>
-            <url>http://srv-wall-build1.groupgti.net:8083/repository/maven-releases/</url>
-        </repository>
-        <snapshotRepository>
-            <id>gti-repo</id>
-            <name>GTI Internal Snapshot Repository</name>
-            <url>http://srv-wall-build1.groupgti.net:8083/repository/maven-snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
-
     <dependencies>
+        <!-- Gravitee dependencies -->
+        <dependency>
+            <groupId>io.gravitee.repository</groupId>
+            <artifactId>gravitee-repository</artifactId>
+            <version>${gravitee-repository.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- Runtime scope -->
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-            <version>3.5.3</version>
+            <version>${liquibase.version}</version>
         </dependency>
         <dependency>
             <groupId>com.mattbertolini</groupId>
             <artifactId>liquibase-slf4j</artifactId>
-            <version>2.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.yaml</groupId>
-            <artifactId>snakeyaml</artifactId>
-            <version>1.18</version>
+            <version>${liquibase-slf4j.version}</version>
         </dependency>
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
-            <version>2.6.1</version>
-        </dependency>        
-        
-        <!-- Provided scope -->
-        <dependency>
-            <groupId>io.gravitee.gateway</groupId>
-            <artifactId>gravitee-gateway-api</artifactId>
-            <version>1.7.0</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>io.gravitee.repository</groupId>
-            <artifactId>gravitee-repository</artifactId>
-            <version>1.12.0</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>io.gravitee.common</groupId>
-            <artifactId>gravitee-common</artifactId>
-            <version>1.8.0</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
-            <version>1</version>
+            <version>${HikariCP.version}</version>
         </dependency>
 
         <!-- Spring dependencies -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>4.3.3.RELEASE</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-expression</artifactId>
-            <version>4.3.3.RELEASE</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
-            <version>4.3.3.RELEASE</version>
+            <version>${spring.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
-            <version>4.3.3.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
-                            
+
+        <!-- Logging -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- Test scope -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>io.gravitee.repository</groupId>
+            <artifactId>gravitee-repository-test</artifactId>
+            <version>${gravitee-repository-test.version}</version>
+            <classifier>tests</classifier>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-all</artifactId>
-            <version>1.3</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <version>4.3.3.RELEASE</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.4.195</version>
+            <version>${h2.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.41</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.gravitee.repository</groupId>
-            <artifactId>gravitee-repository-test</artifactId>
-            <version>1.12.0</version>
-            <classifier>tests</classifier>
-            <scope>test</scope>
-        </dependency>        
     </dependencies>
 
     <build>
@@ -188,29 +111,21 @@
                 <filtering>true</filtering>
             </resource>
         </resources>
-        
-        <extensions>
-            <extension>
-                <groupId>org.apache.maven.wagon</groupId>
-                <artifactId>wagon-ssh</artifactId>
-                <version>2.12</version>
-            </extension>
-        </extensions>
-            
+
         <plugins>
-            
+
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>2.4</version>
                 <configuration>
                     <appendAssemblyId>false</appendAssemblyId>
                     <descriptors>
-                        <descriptor>src/assembly/policy-assembly.xml</descriptor>
+                        <descriptor>src/main/assembly/plugin-assembly.xml</descriptor>
                     </descriptors>
                 </configuration>
                 <executions>
                     <execution>
-                        <id>make-policy-assembly</id>
+                        <id>make-plugin-assembly</id>
                         <phase>package</phase>
                         <goals>
                             <goal>single</goal>
@@ -218,26 +133,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>com.mycila</groupId>
-                <artifactId>license-maven-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
-            </plugin>
-            
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
-                <configuration>
-                    <forkCount>1</forkCount>
-                    <reuseForks>true</reuseForks>
-                    <!--argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine-->
-                    <trimStackTrace>false</trimStackTrace>
-                </configuration>
-            </plugin>
-            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
@@ -258,8 +153,6 @@
                     </execution>
                 </executions>
             </plugin>
-            
         </plugins>
     </build>
-
 </project>
