--- a/src/main/resources/plugin.properties
+++ b/src/main/resources/plugin.properties
@@ -1,6 +1,6 @@
-id=${project.artifactId}
-name=JDBC Repository
+id=repository-jdbc
+name=${project.name}
 version=${project.version}
 description=${project.description}
-class=com.groupgti.shared.gravitee.repository.jdbc.JdbcRepository
+class=io.gravitee.repository.jdbc.JdbcRepository
 type=repository
