--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,12 @@
 
 	<groupId>io.gravitee.repository</groupId>
 	<artifactId>gravitee-repository-redis</artifactId>
-	<version>1.15.0-SNAPSHOT</version>
+	<version>1.14.1-SNAPSHOT</version>
 	<name>Gravitee.io APIM - Repository - Redis</name>
 
 	<properties>
 		<gravitee-repository.version>1.14.0</gravitee-repository.version>
-		<gravitee-repository-test.version>1.14.0</gravitee-repository-test.version>
+		<gravitee-repository-test.version>1.14.1-SNAPSHOT</gravitee-repository-test.version>
 		<jedis.version>2.9.0</jedis.version>
 		<spring-data-redis.version>1.8.9.RELEASE</spring-data-redis.version>
 		<maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
