feat(technical-api): Add API to get statistics about api-key and subscription refresher
Closes gravitee-io/issues#1095

--- a/gravitee-gateway-services/gravitee-gateway-services-apikeyscache/pom.xml
+++ b/gravitee-gateway-services/gravitee-gateway-services-apikeyscache/pom.xml
@@ -90,6 +90,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!-- Vert.x -->
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-web</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
