--- a/gravitee-gateway-services/gravitee-gateway-services-subscriptions-cache/pom.xml
+++ b/gravitee-gateway-services/gravitee-gateway-services-subscriptions-cache/pom.xml
@@ -90,6 +90,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!-- Vert.x -->
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-web</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
