--- a/pom.xml
+++ b/pom.xml
@@ -23,16 +23,16 @@
     <parent>
         <groupId>io.gravitee</groupId>
         <artifactId>gravitee-parent</artifactId>
-        <version>7</version>
+        <version>10</version>
     </parent>
 
     <groupId>io.gravitee.repository</groupId>
     <artifactId>gravitee-repository-test</artifactId>
-    <version>1.14.1-SNAPSHOT</version>
+    <version>1.15.0-SNAPSHOT</version>
     <name>Gravitee.io APIM - Repository - Test</name>
 
     <properties>
-        <gravitee-repository.version>1.14.0</gravitee-repository.version>
+        <gravitee-repository.version>1.15.0-SNAPSHOT</gravitee-repository.version>
         <commons-io.version>1.3.2</commons-io.version>
         <jackson-mapper-asl.version>1.9.13</jackson-mapper-asl.version>
         <javax.inject.version>1</javax.inject.version>
