--- a/pom.xml
+++ b/pom.xml
@@ -23,20 +23,21 @@
 	<parent>
 		<groupId>io.gravitee</groupId>
 		<artifactId>gravitee-parent</artifactId>
-		<version>7</version>
+		<version>10</version>
 	</parent>
 
 	<groupId>io.gravitee.repository</groupId>
 	<artifactId>gravitee-repository-redis</artifactId>
-	<version>1.14.1-SNAPSHOT</version>
+	<version>1.15.0-SNAPSHOT</version>
 	<name>Gravitee.io APIM - Repository - Redis</name>
 
 	<properties>
-		<gravitee-repository.version>1.14.0</gravitee-repository.version>
-		<gravitee-repository-test.version>1.14.1-SNAPSHOT</gravitee-repository-test.version>
+		<gravitee-repository.version>1.15.0-SNAPSHOT</gravitee-repository.version>
+		<gravitee-repository-test.version>1.15.0-SNAPSHOT</gravitee-repository-test.version>
 		<jedis.version>2.9.0</jedis.version>
 		<spring-data-redis.version>1.8.9.RELEASE</spring-data-redis.version>
 		<maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
+		<embedded-redis.version>0.6</embedded-redis.version>
 	</properties>
 
 	<dependencies>
@@ -100,6 +101,12 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.github.kstyrc</groupId>
+			<artifactId>embedded-redis</artifactId>
+			<version>${embedded-redis.version}</version>
 			<scope>test</scope>
 		</dependency>
 
