feat(subscription): add a reason on accept and on request
fix gravitee-io/issues#1098

--- a/src/main/resources/liquibase/master.yml
+++ b/src/main/resources/liquibase/master.yml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
     - file: liquibase/changelogs/v1_14_0/schema.yml
+  - include:
+    - file: liquibase/changelogs/v1_15_0/schema.yml
