--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,12 @@
 
     <groupId>io.gravitee.repository</groupId>
     <artifactId>gravitee-repository-jdbc</artifactId>
-    <version>1.14.0-SNAPSHOT</version>
+    <version>1.15.0-SNAPSHOT</version>
     <name>Gravitee.io APIM - Repository - JDBC</name>
 
     <properties>
-        <gravitee-repository.version>1.14.0</gravitee-repository.version>
-        <gravitee-repository-test.version>1.14.1-SNAPSHOT</gravitee-repository-test.version>
+        <gravitee-repository.version>1.15.0-SNAPSHOT</gravitee-repository.version>
+        <gravitee-repository-test.version>1.15.0-SNAPSHOT</gravitee-repository-test.version>
         <maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
         <HikariCP.version>2.7.6</HikariCP.version>
         <liquibase.version>3.5.3</liquibase.version>
