--- a/gravitee-repository-elasticsearch/pom.xml
+++ b/gravitee-repository-elasticsearch/pom.xml
@@ -26,6 +26,7 @@
 		<version>1.15.0-SNAPSHOT</version>
 	</parent>
 
+	<groupId>io.gravitee.repository</groupId>
 	<artifactId>gravitee-repository-elasticsearch</artifactId>
 	<name>Gravitee.io APIM - Repository - Elasticsearch</name>
 
