feat(authentication): Allow the user to exchange for a token from its authorization server to gravitee JWT
Closes gravitee-io/issues#1228

--- a/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -218,6 +218,7 @@ security:
 #      clientSecret: xxxx-xxx-xxx-xxx
 #      tokenEndpoint: https://oauth2_authorization_server/token
 #      userInfoEndpoint: https://oauth2_authorization_server/userinfo
+#      tokenIntrospectionEndpoint: https://oauth2_authorization_server/token/introspect
 #      accessTokenProperty: access_token
 #      authorizationHeader: "Bearer %s"
 #      mapping:
