--- a/pom.xml
+++ b/pom.xml
@@ -203,17 +203,17 @@
                             <!--</systemPropertyVariables>-->
                         <!--</configuration>-->
                     <!--</execution>-->
-                    <execution>
-                        <id>postgresql</id>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                        <configuration>
-                            <systemPropertyVariables>
-                                <jdbcType>postgresql</jdbcType>
-                            </systemPropertyVariables>
-                        </configuration>
-                    </execution>
+                    <!--<execution>-->
+                        <!--<id>postgresql</id>-->
+                        <!--<goals>-->
+                            <!--<goal>test</goal>-->
+                        <!--</goals>-->
+                        <!--<configuration>-->
+                            <!--<systemPropertyVariables>-->
+                                <!--<jdbcType>postgresql</jdbcType>-->
+                            <!--</systemPropertyVariables>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
                 </executions>
             </plugin>
         </plugins>
