feat(reporter): Moving from LMAX to Vert.x event bus to report data
Closes gravitee-io/issues#1190

--- a/gravitee-gateway-reporting/pom.xml
+++ b/gravitee-gateway-reporting/pom.xml
@@ -48,11 +48,10 @@
             <artifactId>gravitee-plugin-core</artifactId>
         </dependency>
 
-        <!-- Disruptor -->
+        <!-- Vert.x -->
         <dependency>
-            <groupId>com.lmax</groupId>
-            <artifactId>disruptor</artifactId>
-            <version>3.3.6</version>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-core</artifactId>
         </dependency>
 
         <!-- Logging -->
