--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,13 @@
                 <version>${gravitee-plugin-resource.version}</version>
             </dependency>
 
+            <!-- Vert.x -->
+            <dependency>
+                <groupId>io.vertx</groupId>
+                <artifactId>vertx-core</artifactId>
+                <version>${vertx.version}</version>
+            </dependency>
+
             <!-- Logging -->
             <dependency>
                 <groupId>org.slf4j</groupId>
