--- a/pom.xml
+++ b/pom.xml
@@ -155,14 +155,14 @@
 
     <properties>
         <gravitee-definition.version>1.10.0</gravitee-definition.version>
-        <gravitee-common.version>1.8.1</gravitee-common.version>
+        <gravitee-common.version>1.9.0-SNAPSHOT</gravitee-common.version>
         <gravitee-expression-language.version>1.0.0</gravitee-expression-language.version>
         <gravitee-repository.version>1.15.0</gravitee-repository.version>
         <gravitee-plugin-core.version>1.4.0</gravitee-plugin-core.version>
         <gravitee-plugin-policy.version>1.4.0</gravitee-plugin-policy.version>
         <gravitee-plugin-resource.version>1.4.0</gravitee-plugin-resource.version>
         <gravitee-policy-api.version>1.2.0</gravitee-policy-api.version>
-        <gravitee-gateway-api.version>1.8.0</gravitee-gateway-api.version>
+        <gravitee-gateway-api.version>1.9.0-SNAPSHOT</gravitee-gateway-api.version>
         <gravitee-reporter-api.version>1.9.0</gravitee-reporter-api.version>
         <jetty.version>9.3.3.v20150827</jetty.version>
         <httpclient.version>4.5.2</httpclient.version>
