--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 	<properties>
 		<!-- Gravitee's project versions -->
 		<gravitee-gateway-api.version>1.8.0</gravitee-gateway-api.version>
-		<gravitee-common.version>1.8.1</gravitee-common.version>
+		<gravitee-common.version>1.9.0-SNAPSHOT</gravitee-common.version>
 		<gravitee-reporter-api.version>1.9.0</gravitee-reporter-api.version>
 		<gravitee-policy-api.version>1.2.0</gravitee-policy-api.version>
 		<gravitee-repository.version>1.13.0</gravitee-repository.version>
