feat(metrics): Add Prometheus support
Closes gravitee-io/issues#1349

--- a/gravitee-gateway-services/gravitee-gateway-services-core/pom.xml
+++ b/gravitee-gateway-services/gravitee-gateway-services-core/pom.xml
@@ -68,6 +68,18 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-micrometer-metrics</artifactId>
+            <version>${vertx.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
         <!-- Logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
