fix(plan): Rename the plan security definition column
Closes gravitee-io/issues#1226

--- a/src/main/resources/liquibase/master.yml
+++ b/src/main/resources/liquibase/master.yml
@@ -5,3 +5,4 @@ databaseChangeLog:
     - file: liquibase/changelogs/v1_15_0/schema.yml
   - include:
     - file: liquibase/changelogs/v1_16_0/schema.yml
+    - file: liquibase/changelogs/v1_16_0/schema-plans.yml
