--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/src/main/resources/config/gravitee.yml
@@ -115,6 +115,7 @@ reporters:
       - http://${ds.elastic.host}:${ds.elastic.port}
 #    index: gravitee
 #    cluster: elasticsearch
+#    index_per_type: true
 #    bulk:
 #      actions: 1000           # Number of requests action before flush
 #      flush_interval: 5       # Flush interval in seconds
