--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-bootstrap/pom.xml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-bootstrap/pom.xml
@@ -29,4 +29,22 @@
 
     <artifactId>gravitee-gateway-standalone-bootstrap</artifactId>
     <name>Gravitee.io APIM - Gateway - Standalone - Bootstrap</name>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>false</addClasspath>
+                            <mainClass>io.gravitee.gateway.standalone.boostrap.Bootstrap</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
