--- a/pom.xml
+++ b/pom.xml
@@ -162,7 +162,7 @@
 
     <properties>
         <gravitee-definition.version>1.10.0</gravitee-definition.version>
-        <gravitee-common.version>1.9.0</gravitee-common.version>
+        <gravitee-common.version>1.10.0-SNAPSHOT</gravitee-common.version>
         <gravitee-expression-language.version>1.0.0</gravitee-expression-language.version>
         <gravitee-repository.version>1.16.0</gravitee-repository.version>
         <gravitee-plugin-core.version>1.4.0</gravitee-plugin-core.version>
