feat: Allows to search and filter APIs
This closes gravitee-io/issues#561

--- a/src/main/resources/liquibase/master.yml
+++ b/src/main/resources/liquibase/master.yml
@@ -8,6 +8,8 @@ databaseChangeLog:
   - include:
     - file: liquibase/changelogs/v1_16_0/schema-plans.yml
   - include:
+    - file: liquibase/changelogs/v1_18_0/schema.yml
+  - include:
     - file: liquibase/changelogs/v1_18_0/schema-plans.yml
   - include:
     - file: liquibase/changelogs/v1_18_0/schema-pages.yml
