chore: make rxjava a global dependency
fix gravitee-io/issues#1236

--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,12 @@
                 <version>${vertx.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>io.vertx</groupId>
+                <artifactId>vertx-rx-java2</artifactId>
+                <version>${vertx.version}</version>
+            </dependency>
+
             <!-- Logging -->
             <dependency>
                 <groupId>org.slf4j</groupId>
