--- a/gravitee-gateway-core/pom.xml
+++ b/gravitee-gateway-core/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>io.gravitee.gateway</groupId>
         <artifactId>gravitee-gateway</artifactId>
-        <version>1.18.0</version>
+        <version>1.18.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>gravitee-gateway-core</artifactId>
