--- a/gravitee-gateway-security/gravitee-gateway-security-oauth2/pom.xml
+++ b/gravitee-gateway-security/gravitee-gateway-security-oauth2/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>io.gravitee.gateway.security</groupId>
         <artifactId>gravitee-gateway-security</artifactId>
-        <version>1.18.0</version>
+        <version>1.18.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>gravitee-gateway-security-oauth2</artifactId>
