--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
     <groupId>io.gravitee.gateway</groupId>
     <artifactId>gravitee-gateway</artifactId>
-    <version>1.18.0</version>
+    <version>1.18.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Gravitee.io APIM - Gateway</name>
 
