--- a/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-sse/src/main/resources/plugin.properties
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-sse/src/main/resources/plugin.properties
@@ -2,5 +2,5 @@ id=sse
 name=Entrypoint SSE
 version=${project.version}
 description=${project.description}
-class=main.java.io.gravitee.plugin.endpoint.mock.SseEntrypointConnectorFactory
+class=io.gravitee.plugin.entrypoint.sse.SseEntrypointConnectorFactory
 type=entrypoint-connector
