test: activate plugins maven tests and improve coverage

--- a/gravitee-apim-plugin/sonar-project.properties
+++ b/gravitee-apim-plugin/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.sources=.
 sonar.java.binaries=**/target/**
 
 # Exclude the whole coverage module as it is needed only for code coverage purpose
-sonar.exclusions=gravitee-apim-plugins-coverage/**, **/target/**
+sonar.exclusions=gravitee-apim-plugin-coverage/**, **/target/**
 
 # Source encoding
 sonar.language=java
@@ -21,5 +21,8 @@ sonar.test=.
 sonar.test.inclusions=**/*Test.java
 
 # Coverage
-sonar.coverage.jacoco.xmlReportPaths=gravitee-apim-plugins-coverage/target/site/jacoco-aggregate/jacoco.xml
+sonar.coverage.jacoco.xmlReportPaths=gravitee-apim-plugin-coverage/target/site/jacoco-aggregate/jacoco.xml
 sonar.coverage.exclusions=**/pom.xml, **/src/test/**, **/model/**
+
+# Code duplication
+sonar.cpd.exclusions=**/src/test/**
