--- a/gravitee-apim-e2e/package.json
+++ b/gravitee-apim-e2e/package.json
@@ -52,6 +52,7 @@
     },
     "dependencies": {
         "@faker-js/faker": "6.2.0",
+        "@gravitee/fixtures": "file:lib/fixtures",
         "@gravitee/management-webclient-sdk": "file:lib/management-webclient-sdk",
         "@gravitee/portal-webclient-sdk": "file:lib/portal-webclient-sdk",
         "jsonwebtoken": "8.5.1",
