feat(perf): add keyless api scenario
gravitee-io/issues#8196

--- a/gravitee-apim-perf/.env
+++ b/gravitee-apim-perf/.env
@@ -16,3 +16,8 @@ APP_USERNAME=application1
 APP_PASSWORD=application1
 SIMPLE_USERNAME=user
 SIMPLE_PASSWORD=password
+
+# API configuration
+API_ENDPOINT_URL=https://load-tests-echo-api.cloud.gravitee.io/echo
+# V3 | JUPITER
+API_EXECUTION_MODE=JUPITER
