fix: this fixes 3.15.14 merge

--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
         <!-- Version properties -->
         <revision>3.18.7</revision>
         <sha1/>
-        <changelist></changelist>
+        <changelist>-SNAPSHOT</changelist>
 
         <!-- Vert.X version is mandatory for vertx-grpc-protoc-plugin in gravitee-apim-gateway-standalone-container -->
         <vertx.version>4.2.7</vertx.version>
