--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
         <gravitee-connector-api.version>1.1.2</gravitee-connector-api.version>
         <gravitee-expression-language.version>1.11.0</gravitee-expression-language.version>
         <gravitee-fetcher-api.version>1.4.0</gravitee-fetcher-api.version>
-        <gravitee-gateway-api.version>1.40.0</gravitee-gateway-api.version>
+        <gravitee-gateway-api.version>1.42.0</gravitee-gateway-api.version>
         <gravitee-license-node.version>1.3.1</gravitee-license-node.version>
         <gravitee-node.version>1.25.0</gravitee-node.version>
         <gravitee-notifier-api.version>1.4.1</gravitee-notifier-api.version>
@@ -125,7 +125,7 @@
         <swagger-core.version>2.1.13</swagger-core.version>
         <swagger-parser.version>2.0.30</swagger-parser.version>
         <swagger-models.version>1.6.4</swagger-models.version>
-        <testcontainers.version>1.16.3</testcontainers.version>
+        <testcontainers.version>1.17.3</testcontainers.version>
         <xmlbeans.version>3.1.0</xmlbeans.version>
         <wiremock.version>2.27.2</wiremock.version>
         <wiremock-jre8.version>2.32.0</wiremock-jre8.version>
@@ -1020,6 +1020,17 @@
                 <module>gravitee-apim-definition</module>
                 <module>gravitee-apim-rest-api</module>
                 <module>gravitee-apim-gateway</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>plugin-modules</id>
+            <activation>
+                <property>
+                    <name>plugin-modules</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <modules>
                 <module>gravitee-apim-plugin</module>
             </modules>
         </profile>
