ci: add branch name to test the -Dmaven.test.skip=true option

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1284,6 +1284,7 @@ workflows:
                           only:
                               - master
                               - /^\d+\.\d+\.x$/
+                              - improve-code-analysis-reporting
                   requires:
                       - test
                       - test-repository
